--- a/.gitignore
+++ b/.gitignore
@@ -2,17 +2,7 @@
 .gradle
 gradle.properties
 local.properties
-.idea/caches/
-.idea/libraries
-.idea/modules.xml
-.idea/workspace.xml
-.idea/gradle.xml
-.idea/codeStyles/
-.idea/assetWizardSettings.xml
-.idea/navEditor.xml
-.idea/markdown-navigator/
-.idea/markdown-navigator.xml
-.idea/markdown-exported-files.xml
+.idea/
 .DS_Store
 /build
 /app/release
