--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,13 +3,17 @@ apply plugin: 'realm-android'
 
 android {
 
-    compileSdkVersion 30
+    namespace 'ru.arvalon.coffeeorder'
+
     defaultConfig {
         applicationId "ru.arvalon.coffeeorder"
+
         minSdkVersion 23
-        targetSdkVersion 30
-        versionCode 2
-        versionName "1.1"
+        compileSdk 33
+        targetSdkVersion 33
+
+        versionCode 3
+        versionName "1.2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -72,10 +76,16 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     // Отслеживание утечек памяти
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.4'
-    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.4'
+    //debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.14'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:3.0-alpha-8'
 
     // Stetho chrome://inspect
     debugImplementation 'com.facebook.stetho:stetho:1.5.1'
-    debugImplementation 'com.uphyca:stetho_realm:2.2.2'
+    debugImplementation 'com.uphyca:stetho_realm:2.1.0'
+}
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
 }
