--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,17 @@ buildscript {
     
     repositories {
         google()
-        jcenter()
+        maven {
+            url 'https://oss.sonatype.org/content/repositories/snapshots/'
+        }
+        maven {
+            url 'https://github.com/uPhyca/stetho-realm/raw/master/maven-repo'
+        }
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.2'
-        classpath "io.realm:realm-gradle-plugin:5.0.0"
+        classpath 'com.android.tools.build:gradle:8.8.1'
+        classpath 'io.realm:realm-gradle-plugin:10.19.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -18,7 +24,13 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
+        maven {
+            url 'https://oss.sonatype.org/content/repositories/snapshots/'
+        }
+        maven {
+            url 'https://github.com/uPhyca/stetho-realm/raw/master/maven-repo'
+        }
+        mavenCentral()
     }
 }
 
